--- a/jbatchtool-cli/pom.xml
+++ b/jbatchtool-cli/pom.xml
@@ -5,7 +5,6 @@
   <groupId>org.jbatchtool.cli</groupId>
   <artifactId>jbatchtool-cli</artifactId>
   <version>0.1.0</version>
-  <packaging>war</packaging>
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
@@ -15,12 +14,77 @@
     <finalName>jbatchtool-cli</finalName>
     <plugins>
       <plugin>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>2.4</version>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>appassembler-maven-plugin</artifactId>
+        <version>1.7</version>
         <configuration>
-          <failOnMissingWebXml>false</failOnMissingWebXml>
-        </configuration>
+            <repositoryLayout>flat</repositoryLayout>
+            <repositoryName>lib</repositoryName>
+            <configurationDirectory>config</configurationDirectory>
+            <generateRepository>false</generateRepository>
+            <installArtifacts>false</installArtifacts>
+            <extraJvmArguments>-Xmx512m -Dlogback.configurationFile=$BASEDIR/config/logback.xml</extraJvmArguments>
+            <programs>
+              <program>
+                <mainClass>org.jbatchtool.cli.RestClientCheckResultAsync</mainClass>
+                <id>jbatchtool-cli</id>
+                <platforms>
+                  <platform>unix</platform>
+                </platforms>
+              </program>
+            </programs>
+            <binFileExtensions>
+              <unix>.sh</unix>
+            </binFileExtensions>
+            <projectArtifactFirstInClassPath>true</projectArtifactFirstInClassPath>
+            </configuration>
+            <executions>
+              <execution>
+                <phase>package</phase>
+                  <goals>
+                    <goal>assemble</goal>
+                  </goals>
+              </execution>
+            </executions>
       </plugin>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+          <configuration>
+            <descriptors>
+                        <descriptor>src/main/assembly/descriptor-bin.xml</descriptor>
+                    </descriptors>
+                    <archive>
+                        <manifestEntries>
+                            <Class-Path>config/</Class-Path>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
     </plugins>
   </build>
+  <dependencyManagement>
+  	<dependencies>
+  		<dependency>
+  			<groupId>javax</groupId>
+  			<artifactId>javaee-api</artifactId>
+  			<version>7.0</version>
+  		</dependency>
+  	</dependencies>
+  </dependencyManagement>
+  <dependencies>
+  	<dependency>
+  		<groupId>org.jboss.resteasy</groupId>
+  		<artifactId>resteasy-client</artifactId>
+  		<version>3.0.14.Final</version>
+  	</dependency>
+  </dependencies>
 </project>
