--- a/jbatchtool-core/pom.xml
+++ b/jbatchtool-core/pom.xml
@@ -28,7 +28,7 @@
   	<dependency>
   		<groupId>org.projectlombok</groupId>
   		<artifactId>lombok</artifactId>
-  		<version>1.16.6</version>
+  		<version>1.16.8</version>
   		<scope>provided</scope>
   	</dependency>
   	<dependency>
@@ -38,4 +38,10 @@
   	</dependency>
   </dependencies>
     <version>0.1.0-SNAPSHOT</version>
+    <parent>
+    	<relativePath>../jbatchtool-parent</relativePath>
+    	<groupId>org.ent4j.jbatchtool</groupId>
+    	<artifactId>jbatchtool-parent</artifactId>
+    	<version>0.1.0</version>
+    </parent>
 </project>
