--- a/jbatchtool-core/pom.xml
+++ b/jbatchtool-core/pom.xml
@@ -3,7 +3,7 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>jbatchtool-core</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+  <version>0.1.1</version>
 <!-- 
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -11,8 +11,38 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
  -->
+
+  <distributionManagement>
+    <repository>
+        <id>bintray-banz-ghb-maven</id>
+        <name>banz-ghb-maven</name>
+        <url>https://api.bintray.com/maven/banz-ghb/maven/jbatchtool-core/;publish=1</url>
+    </repository>
+  </distributionManagement>
+
   <build>
     <finalName>jbatchtool-core</finalName>
+    <plugins>
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-source-plugin</artifactId>
+      </plugin>
+
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+      </plugin>
+
+     <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+      </plugin>
+
+     <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-gpg-plugin</artifactId>
+      </plugin>
+    </plugins>
   </build>
   
   <dependencyManagement>
